[package]
name = "atsamda1_test"
version = "0.1.0"
edition = "2021"

[dependencies]
atsamd-hal = { version = "0.15.1", default-features = false, features = ["samd21j-rt", "unproven"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
# panic-probe = "0.3"
panic-halt = "0.2"
